Aggiornamento e Fix documentazione

--- a/T23-G1/docker-compose.yml
+++ b/T23-G1/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     volumes:
       - ./mysql_init/init.sql:/docker-entrypoint-initdb.d/init.sql
       - mysql_data_volume:/var/lib/mysql
-    ports:
+    expose:
       - "3306:3306"
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-u", "${MYSQL_USER}", "-p${MYSQL_PASSWORD}" ]
