--- a/T1-G11/applicazione/manvsclass/docker-compose.yml
+++ b/T1-G11/applicazione/manvsclass/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     image: "mongo:6.0.6"
     container_name: t1-mongo_db
     restart: always
-    ports:
+    expose:
       - "27017:27017"
     volumes:
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
