--- a/T4/gamerepo/pom.xml
+++ b/T4/gamerepo/pom.xml
@@ -52,7 +52,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <scope>provided</scope>
+			<version>1.18.30</version>
+			<scope>provided</scope>
         </dependency>
 
 		<!-- MapStruct -->
@@ -104,9 +105,20 @@
 							<artifactId>mapstruct-processor</artifactId>
 							<version>1.6.0</version>
 						</path>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.30</version>
+						</path>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok-mapstruct-binding</artifactId>
+							<version>0.2.0</version>
+						</path>
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
+
 		</plugins>
 	</build>
 
