--- a/T5-G2/t5/docker-compose.yml
+++ b/T5-G2/t5/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: redis:latest
     container_name: t5-redis
     restart: always
-    expose:
+    ports:
       - "6379:6379"
     networks:
       - global-network
